@@ -228,10 +228,10 @@ fluid_at_temperature=__1__ at __2__ __3__
 submit=Submit
 delete=Delete
 cancel=Cancel
-back=Back
-confirm_dialog=- Press __CONTROL__fp_confirm_dialog__ to confirm -
-cancel_dialog=- Press __CONTROL__toggle-menu__ to cancel -
-back_dialog=- Press __CONTROL__toggle-menu__ to go back -
+confirm_dialog_tt=- Press __CONTROL__fp_confirm_dialog__ to confirm -
+cancel_dialog_tt=- Press __CONTROL__toggle-menu__ to cancel -
+search_button_tt=- Press __CONTROL__focus-search__ to focus searchfield -
+close_button_tt=- Press __CONTROL__toggle-menu__ to close -
 warning_with_icon=[img=fp_sprite_warning_red] __1__
 
 # Modules dialog
@@ -249,7 +249,6 @@ beacon_issue_set_amount=Enter a beacon amount per machine greater than 0
 
 # Picker dialog
 amount_by=Amount by __1__
-search_button_tt=- Press __CONTROL__focus-search__ to focus searchfield -
 no_item_found=There are no items that match your search term
 picker_issue_select_item=Select the item you want to add
 picker_issue_enter_amount=Specify an amount by number or belt
