@@ -71,7 +71,7 @@ function title_bar.build(player)
     local button_close = flow_title_bar.add{type="sprite-button", tags={on_gui_click="close_main_dialog"},
       sprite="utility/close_white", hovered_sprite="utility/close_black", clicked_sprite="utility/close_black",
       tooltip={"fp.close_interface"}, style="frame_action_button", mouse_button_filter={"left"}}
-    button_close.style.padding = 2
+    button_close.style.padding = 1
 end
 
 
